Add script start on package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend da aplicacao de controle de caixa",
   "main": "src/loader.js",
   "scripts": {
+    "start": "pm2 start src/loader.js",
     "dev": "nodemon src/loader.js",
     "prod": "pm2 start src/loader.js"
   },
